--- a/Market_Basket_Analysis_Project_Bernard.ipynb
+++ b/Market_Basket_Analysis_Project_Bernard.ipynb
@@ -6,7 +6,7 @@
       "name": "Market Basket Analysis Project-Bernard.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNCnY4ZAUykSuxeL7LgJw5",
+      "authorship_tag": "ABX9TyPmI5iwOccY/j8+pQmx9acH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,26 @@
       ],
       "metadata": {
         "id": "JWTUtzDbB2j0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Defining the business question**\n",
+        "\n",
+        "As a Data analyst working for one of the stores, you must perform market basket analysis to help the store maximize revenue."
+      ],
+      "metadata": {
+        "id": "DsTHSEgFIWFT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Perform data importation and loading**"
+      ],
+      "metadata": {
+        "id": "kcUYRLLsIyF-"
       }
     },
     {
@@ -255,6 +275,15 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Perform data preprocessing**"
+      ],
+      "metadata": {
+        "id": "1sqovKGII70_"
+      }
     },
     {
       "cell_type": "code",
@@ -1006,6 +1035,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Find frequent itemsets**"
+      ],
+      "metadata": {
+        "id": "bres6skdJN5i"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#We generate the frequent itemsets\n",
@@ -1170,6 +1208,15 @@
           "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Generate association rules**"
+      ],
+      "metadata": {
+        "id": "y6nFjFL9JYIm"
+      }
     },
     {
       "cell_type": "code",
@@ -1385,6 +1432,15 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Perform metric interpretation and provide recommendation Dataset**"
+      ],
+      "metadata": {
+        "id": "v7iGdOnkJg5-"
+      }
     }
   ]
 }
