--- a/Market_Basket_Analysis_Project_Bernard.ipynb
+++ b/Market_Basket_Analysis_Project_Bernard.ipynb
@@ -6,7 +6,7 @@
       "name": "Market Basket Analysis Project-Bernard.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmI5iwOccY/j8+pQmx9acH",
+      "authorship_tag": "ABX9TyOoUYp3UzMWH74O//jyuKA6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,12 +62,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Defining the business question**\n",
+        "**Defining the business question**/ **Specifying the Research Question**\n",
         "\n",
         "As a Data analyst working for one of the stores, you must perform market basket analysis to help the store maximize revenue."
       ],
       "metadata": {
         "id": "DsTHSEgFIWFT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Defining the Metric for Success**\n",
+        "\n",
+        "We will achieve our objective by finding association of itemsets with more than 0.3 Confidence and Lift greater than 1"
+      ],
+      "metadata": {
+        "id": "aAPcuA8iMscz"
       }
     },
     {
@@ -81,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hqZvEe8LByH1"
       },
@@ -107,7 +118,7 @@
         "id": "IXQxskWICiZ0",
         "outputId": "7f2fced5-d6b0-4fe5-8a1e-84f79a62ab61"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +313,7 @@
         "id": "lXQe3z8fCsT6",
         "outputId": "41a69089-becf-48a5-ba4b-0ee89f8340b1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +491,7 @@
         "id": "NJHSqmf6DNWT",
         "outputId": "bc163cd5-d406-4d6b-bba0-3ca7d1fd8653"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +781,7 @@
         "id": "CUO1N9VoFGeF",
         "outputId": "f84ead65-7e72-4bfe-f10a-178234fc5331"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,7 +1069,7 @@
         "id": "dlNQBBKbFTS6",
         "outputId": "1f529433-a746-45b2-f48a-be617d3c4b69"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1238,7 +1249,7 @@
         "id": "tYXBn098Fw-b",
         "outputId": "3e1b080b-4398-4904-f2e3-e034d9ebb018"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1440,6 +1451,27 @@
       ],
       "metadata": {
         "id": "v7iGdOnkJg5-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Observation**\n",
+        "\n",
+        "* The output above shows the Top 5 itemsets sorted by confidence value and all itemsets have support value over 1% and lift value over 1. \n",
+        "\n",
+        "* The first itemset shows the association rule \"if Pencils, Toothpaste then Candy Bar\" with support value at 0.022748 means nearly 2.3% of all transactions have this combination of Pencils, Toothpaste and Candy Bar bought together. \n",
+        "\n",
+        "* We also have 70% confidence that Coffee sales happen whenever a Toast is purchased. \n",
+        "\n",
+        "* The lift value of 1.47 (greater than 1) shows that the purchase of Coffee is indeed influenced by the purchase of Toast rather than Coffee's purchase being independent of Toast. \n",
+        "\n",
+        "* The lift value of 1.47 means that Toast's purchase lifts the Coffee's purchase by 1.47 times.\n",
+        "\n",
+        "* Therefore, we can conclude that there is indeed evidence to suggest that the purchase of Toast leads to the purchase of Coffee. The owner of the bakery should consider bundling Toast and Cofee together as a Breakfast Set or Lunch Set, the staff in the store should also be trained to cross-sell Coffee to customers who purchase Toast, knowing that they are more likely to purchase them together, thereby increasing the store's revenue."
+      ],
+      "metadata": {
+        "id": "TBGsM8mlKil8"
       }
     }
   ]
