--- a/Market_Basket_Analysis_Project_Bernard.ipynb
+++ b/Market_Basket_Analysis_Project_Bernard.ipynb
@@ -6,7 +6,7 @@
       "name": "Market Basket Analysis Project-Bernard.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoUYp3UzMWH74O//jyuKA6",
+      "authorship_tag": "ABX9TyOWC0UaPB26b8/axFSZAPq/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "source": [
         "**Background and Problem Statement**\n",
         "\n",
-        "Care five is a German multinational retail corporation headquartered in Berlin, Germany. It is the eighth-largest retailer in the world by revenue. It operates a chain of hypermarkets, groceries stores, and convenience stores, which as of January 2021, comprises its 12,00 stores in over 30 countries.\n",
+        "Care five is a German multinational retail corporation headquartered in Berlin, Germany. It is the eighth-largest retailer in the world by revenue. It operates a chain of hypermarkets, groceries stores, and convenience stores, which as of January 2021, comprises its 1,200 stores in over 30 countries.\n",
         "\n",
         "As a Data analyst working for one of the stores, you must perform market basket analysis to help the store maximize revenue. More specifically, your task will analyze transactional data to identify the top 10 products likely to be purchased together. Given a dataset containing transactional data of products sold in the past week, you will\n",
         "be required to perform the following:\n",
@@ -1462,13 +1462,7 @@
         "\n",
         "* The first itemset shows the association rule \"if Pencils, Toothpaste then Candy Bar\" with support value at 0.022748 means nearly 2.3% of all transactions have this combination of Pencils, Toothpaste and Candy Bar bought together. \n",
         "\n",
-        "* We also have 70% confidence that Coffee sales happen whenever a Toast is purchased. \n",
-        "\n",
-        "* The lift value of 1.47 (greater than 1) shows that the purchase of Coffee is indeed influenced by the purchase of Toast rather than Coffee's purchase being independent of Toast. \n",
-        "\n",
-        "* The lift value of 1.47 means that Toast's purchase lifts the Coffee's purchase by 1.47 times.\n",
-        "\n",
-        "* Therefore, we can conclude that there is indeed evidence to suggest that the purchase of Toast leads to the purchase of Coffee. The owner of the bakery should consider bundling Toast and Cofee together as a Breakfast Set or Lunch Set, the staff in the store should also be trained to cross-sell Coffee to customers who purchase Toast, knowing that they are more likely to purchase them together, thereby increasing the store's revenue."
+        "* Therefore, we can conclude that there is indeed evidence to suggest that the purchase of Toothpaste, Pencils, Magazine, Greeting Cards and Candy Bar go hand in hand. Care Five Supermarket should consider bundling the above items next to one another, the staff in the store should also be trained to cross-sell these items, knowing that customers are more likely to purchase them together, thereby increasing the supermarket's revenue."
       ],
       "metadata": {
         "id": "TBGsM8mlKil8"
